--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-   <script src="clock.js"></script>
+<script src="hexClock.js"></script>
 <link rel="stylesheet" href="style.css" type="text/css">
 
 <meta charset="UTF-8">
